# ICPT

./: .gitignore
ICPT_opdracht4_Abstract_Data_Types/: ConsoleApp1.sln
ICPT_opdracht4_Abstract_Data_Types/ConsoleApp1/: BinarySearchTree.cs  Queue.cs  Stack.cs
ICPT_opdracht5_GO_webshop/api/: go.mod  main.go
ICPT_opdracht5_GO_webshop/frontend/: go.mod  main.go
c#_abstract_datatypes/ConsoleApp1/: Program.cs  Queue.cs
c_stratego/: CMakeLists.txt  main.c
c_stratego/src/board/: board.c  board.h
c_stratego/src/tile/: tile.c
c_stratego/src/util/: str.c  str.h  util.c
c_toolchain/: main.out  main.s  pre_compiler.c
go_webshop/frontend/: main.go
stratego/: main.c
stratego/data/: pieces.h
stratego/src/board/: board.c  board.h
stratego/src/tile/: tile.h
stratego/src/util/: str.c  util.h
